avance de sisiot

--- a/Tailwind/02/prototype/index.html
+++ b/Tailwind/02/prototype/index.html
@@ -2,31 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      http-equiv="X-UA-Compatible"
-      content="IE=edge"
-    />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      rel="preconnect"
-      href="https://fonts.googleapis.com"
-    />
-    <link
-      rel="stylesheet"
-      href="./styles/styles.css"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <title>Document</title>
   </head>
   <body>
     <main class="bg-gray-100 h-screen">
-      <navbar class="flex items-center p-2 justify-between max-w-screen-2xl mx-auto md:p-2 lg:p-5">
+      <navbar
+        class="flex items-center p-2 justify-between max-w-screen-2xl mx-auto md:p-2 lg:p-5"
+      >
         <p class="font-semibold text-2xl md:text-xl">rainfall.</p>
         <div class="flex items-center gap-3">
-          <div class="hidden items-center justify-end gap-5 sm:text-xs md:flex lg:text-base">
+          <div
+            class="hidden items-center justify-end gap-5 sm:text-xs md:flex lg:text-base"
+          >
             <a href="">Work</a>
             <a href="">About</a>
             <a href="">Design Made Human™</a>
@@ -36,7 +28,9 @@
             <a href="">Careers</a>
           </div>
           <div class="flex items-center">
-            <button class="text-xs border-2 p-2 rounded-full border-gray-400 md:text-base">
+            <button
+              class="text-xs border-2 p-2 rounded-full border-gray-400 md:text-base"
+            >
               Get in touch
             </button>
           </div>
@@ -58,77 +52,283 @@
           </svg>
         </button>
       </navbar>
-      <div class="h-3/5 flex flex-col justify-center max-w-screen-2xl mx-auto">
-        <span
-          class="font-thin absolute text-[5rem] left-10 top-20 sm:text-[6rem] sm:top-10 sm:left-10 md:text-[8rem] md:top-10 md:left-5 lg:text-[10rem] lg:top-0 lg:left-0 2xl:text-[12rem]"
-          style="font-family: 'Montserrat', sans-serif"
-          >Platforms</span
-        >
-        <span
-          class="font-bold absolute text-[5rem] left-10 bottom-2 sm:text-[6rem] sm:bottom-10 sm:left-10 md:text-[8rem] md:-bottom-5 md:left-5 lg:text-[10rem] lg:-bottom-5 lg:left-0 2xl:text-[12rem] 2xl:-bottom-10"
-          style="font-family: 'PT Serif', serif"
-          >reimagined.</span
-        >
-        <img
-          src="https://i.pinimg.com/236x/06/72/9b/06729bb26fc7dc040202133776456564.jpg"
-          class="absolute rounded-lg h-16 w-16 left-96 top-28 sm:left-[28rem] sm:top-20 md:h-20 md:w-20 md:left-[35rem] md:top-28 lg:left-[42rem] lg:top-16 lg:h-28 lg:w-28 2xl:h-36 2xl:w-36 2xl:left-[52rem] 2xl:bottom-36"
-        />
-      </div>
-      <div class="w-4/5 m-auto flex justify-start">
-        <button class="border-2 p-3 border-gray-400 rounded-full">How we work</button>
-      </div>
-    </main>
-    <section class="h-screen w-screen">
-      <div class="w-4/6 m-auto my-20">
-        <img
-          class="h-full w-full"
-          src="./assets/img container.png"
-          alt=""
-        />
-        <p class="mt-28 text-5xl 2xl:text-9xl font-bold">Case Studies</p>
-        <p class="font-base my-4 2xl:text-2xl">Enjoy a few of our selected projects</p>
-      </div>
-      <div class="w-5/6 h-[40rem] m-auto relative">
-        <div class="flex justify-around">
+      <div class="h-3/5 flex relative justify-center max-w-screen-2xl mx-auto">
+        <div class="w-full relative">
+          <span
+            class="font-thin 2xl:text-[11rem] absolute top-5 left-0"
+            style="font-family: 'Montserrat', sans-serif"
+            >Platforms</span
+          >
+          <span
+            class="font-bold 2xl:text-[11rem] absolute bottom-5 left-0"
+            style="font-family: 'PT Serif', serif"
+            >reimagined.</span
+          >
+        </div>
+        <div class="w-28 absolute top-28 left-[48rem]">
           <img
-            class="absolute w-24 h-24 left-5 sm:w-28 sm:h-28 sm:left-5 md:w-32 md:h-32 md:left-10 lg:w-40 lg:h-40 lg:left-5 xl:w-52 xl:h-52 xl:left-10 2xl:w-72 2xl:h-64 2xl:left-20"
-            src="https://i.pinimg.com/564x/8e/01/cd/8e01cdc7215f57127ef0eff27b1f2760.jpg"
-            alt=""
-          />
-          <img
-            class="absolute w-32 h-32 top-10 sm:top-10 lg:w-64 lg:h-52 xl:w-52 xl:h-52 2xl:w-96 2xl:h-80 2xl:top-18"
-            src="https://i.pinimg.com/236x/94/a2/d0/94a2d0f6c4f2a8e68940109cba6cc8a0.jpg"
-            alt=""
-          />
-          <img
-            class="absolute w-24 h-32 right-5 sm:w-28 sm:h-32 sm:right-5 md:w-32 md:h-40 md:right-8 lg:w-40 lg:h-52 lg:right-10 xl:w-52 xl:h-52 xl:right-10 2xl:w-52 2xl:h-72 2xl:right-20"
-            src="https://i.pinimg.com/236x/1d/f8/5b/1df85b6f94c0ea67bcc045526fa74b46.jpg"
-            alt=""
+            src="./assets/Home_immersion_black_Stroke.svg"
+            class="w-full h-full"
           />
         </div>
-        <div class="flex justify-around">
+      </div>
+      <div class="w-4/5 m-auto flex justify-start">
+        <button class="border-2 p-3 border-gray-400 rounded-full">
+          How we work
+        </button>
+      </div>
+    </main>
+    <section>
+      <div class="max-w-screen-2xl m-auto">
+        <div class="w-4/6 m-auto my-20">
           <img
-            class="absolute h-44 w-28 -left-5 top-32 sm:w-32 md:top-40 md:w-36 lg:w-36 lg:h-64 lg:top-48 xl:w-52 xl:lg:h-64 xl:top-64 2xl:left-10 2xl:h-96 2xl:w-64 2xl:top-72"
-            src="https://i.pinimg.com/236x/1c/8b/c9/1c8bc94d425a0d207734fde4aa869529.jpg"
+            class="h-full w-full object-cover"
+            src="./assets/img container.png"
             alt=""
           />
-          <img
-            class="absolute w-36 h-28 top-48 right-44 sm:right-52 md:w-48 md:h-34 md:left-34 lg:w-52 lg:h-36 lg:right-96 lg:top-72 xl:w-72 xl:h-48 xl:left-18 2xl:h-64 2xl:w-80 2xl:top-96 2xl:left-96"
-            src="https://i.pinimg.com/564x/49/1c/63/491c632e23df1e6de92618f29c45bece.jpg"
-            alt=""
-          />
-          <img
-            class="absolute w-32 h-32 top-44 -right-2 md:w-40 md:h-40 md:right-10 lg:top-72 xl:h-52 xlw-52 2xl:h-72 2xl:w-64 2xl:right-20 2xl:top-96"
-            src="https://i.pinimg.com/236x/0c/6f/35/0c6f35f53d8994a8cbbcc5c419f078b3.jpg"
-            alt=""
-          />
+          <p class="mt-28 text-5xl 2xl:text-9xl font-bold">Case Studies</p>
+          <p class="font-base my-4 2xl:text-2xl">
+            Enjoy a few of our selected projects
+          </p>
+        </div>
+        <div class="w-5/6 h-[40rem] m-auto relative">
+          <div class="grid grid-cols-3 grid-rows-1 relative">
+            <div class="w-72 h-64">
+              <img
+                class="w-full h-full"
+                src="https://images.doclify.net/rainfall-web/d/776618d4-65cc-4435-9fd9-e358c35af461.jpg?enlarge=0&w=800&format=webp"
+                alt=""
+              />
+            </div>
+            <div class="w-96 h-80 translate-y-10">
+              <img
+                class="w-full h-full"
+                src="https://images.doclify.net/rainfall-web/d/4feb7bd3-d039-483d-85d4-b08d7e6b03a4.jpg?enlarge=0&w=800&format=webp"
+                alt=""
+              />
+            </div>
+            <div class="w-[50%] h-66 translate-x-20">
+              <img
+                class="w-full h-full"
+                src="https://images.doclify.net/rainfall-web/d/4d893181-4b7a-4865-9485-e90bb6f95e88.jpg?enlarge=0&w=800&format=webp"
+                alt=""
+              />
+            </div>
+          </div>
+          <div class="grid grid-cols-3 grid-rows-1">
+            <div class="h-80 w-64 -translate-x-10">
+              <img
+                class="w-full h-full object-cover"
+                src="https://images.doclify.net/rainfall-web/d/b06e49cd-2dd8-4d33-bb66-06df6679b215.jpg?enlarge=0&w=800&format=webp"
+                alt=""
+              />
+            </div>
+            <div class="h-52 w-64 translate-y-20">
+              <img
+                class="w-full h-full object-cover"
+                src="https://images.doclify.net/rainfall-web/d/b77c3954-bdf0-48db-8d96-96fb67e2f934.jpg?enlarge=0&w=800&format=webp"
+                alt=""
+              />
+            </div>
+            <div class="h-64 w-64 translate-y-20">
+              <img
+                class="w-full h-full"
+                src="https://images.doclify.net/rainfall-web/d/2cff050f-cda6-4591-b9fe-4581f5a0eb86.jpg?enlarge=0&w=800&format=webp"
+                alt=""
+              />
+            </div>
+          </div>
         </div>
       </div>
     </section>
-    <section></section>
-    <section></section>
-    <section></section>
-    <section></section>
+    <section>
+      <div class="max-w-screen-2xl m-auto mt-28">
+        <div class="ml-20 flex flex-col gap-5">
+          <h1 class="text-7xl font-bold">Humanity</h1>
+          <p class="text-6xl font-thin w-[55%] tracking-widest">
+            Our work builds more loyal audiences by combining an unwavering
+            focus on their needs and desires, and our relentless pursuit of
+            design excellence.
+          </p>
+          <div>
+            <button class="border-2 border-black rounded-full px-4 py-2">
+              How we`re different
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="max-w-screen-2xl m-auto mt-28">
+        <div class="ml-20 flex flex-col gap-2">
+          <p class="text-7xl font-bold tracking-widest">In Practice</p>
+          <p class="font-semibold">Our capabilities</p>
+        </div>
+        <div class="flex gap-20">
+          <div class="flex justify-center items-center w-1/5">
+            <div class="flex flex-col gap-10">
+              <button class="bg-black text-white rounded-full">Products</button>
+              <button>Branding</button>
+              <button>Websites</button>
+              <button>Commerce</button>
+              <button>Experience</button>
+              <button>Immersion</button>
+            </div>
+          </div>
+          <div class="w-[70%] flex flex-col gap-5">
+            <div class="w-[70%] h-[60%] relative">
+              <img
+                class="w-full h-full"
+                src="https://images.doclify.net/rainfall-web/d/d7928173-e7e9-4a24-8e5b-35863b29b100.jpg?enlarge=0&w=1200&format=webp"
+                alt=""
+              />
+              <div class="w-52 absolute top-44 translate-x-[310%]">
+                <img
+                  class="w-full h-full"
+                  src="./assets/Products_and_Platforms2.svg"
+                  alt=""
+                />
+              </div>
+            </div>
+            <div class="flex flex-col gap-3">
+              <p class="font-semibold">Products & platforms</p>
+              <p class="w-1/2 tracking-wider">
+                People crave digital tools that facilitate the management of
+                their daily lives through beauty and ease of use. We create and
+                design platforms and mobile apps that strengthen personal
+                connections, elevate content consumption, and ease transactions,
+                while keeping the human-centered experience at their core.
+              </p>
+            </div>
+            <div>
+              <button
+                class="border-2 border-black rounded-full px-3 py-2 hover:bg-black hover:text-white"
+              >
+                Learn More
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="max-w-screen-2xl m-auto mt-28 flex flex-col gap-10">
+        <div class="flex flex-col gap-3">
+          <p class="text-7xl tracking-wider font-bold">Curiosity</p>
+          <p class="font-semibold">Our thoughts and ideas</p>
+        </div>
+        <div class="w-full overflow-visible flex shrink-0">
+          <div class="flex shrink-0 gap-5">
+            <div class="flex flex-col w-[7.4%] gap-3">
+              <div class="w-full">
+                <img
+                  class="w-full h-full"
+                  src="https://images.doclify.net/rainfall-web/d/eacf2692-746b-4c7e-82c1-5db93671e7ec.jpg?enlarge=0&w=1400&format=webp"
+                  alt=""
+                />
+              </div>
+              <p class="font-base">Jul 2022</p>
+              <p class="w-full font-bold w-11/12 tracking-wider">
+                An Exuberant Logo For Lively Kids Concerts
+              </p>
+              <div>
+                <button
+                  class="border-2 rounded-full border-black px-4 py-1 hover:bg-black hover:text-white"
+                >
+                  Read more
+                </button>
+              </div>
+            </div>
+            <div class="flex flex-col w-[7.4%] gap-3">
+              <div class="w-full h-3/5">
+                <img
+                  class="w-full h-full"
+                  src="https://images.doclify.net/rainfall-web/d/09883ec9-a355-4f92-8765-91187862e166.jpg?enlarge=0&w=1400&format=webp"
+                  alt=""
+                />
+              </div>
+              <p class="font-base">Jul 2022</p>
+              <p class="w-10/12 font-bold tracking-wider">
+                Vibrant signage for Fort Ward Community Hall
+              </p>
+              <div>
+                <button
+                  class="border-2 rounded-full border-black px-4 py-1 hover:bg-black hover:text-white"
+                >
+                  Read more
+                </button>
+              </div>
+            </div>
+            <div class="flex flex-col w-[7.4%] gap-3">
+              <div class="w-full h-4/6">
+                <img
+                  class="w-full h-full"
+                  src="https://images.doclify.net/rainfall-web/d/b123cf0b-0232-48bf-bf6a-b33959fe7ba3.jpg?enlarge=0&w=1400&format=webp"
+                  alt=""
+                />
+              </div>
+              <p class="font-base">Jul 2022</p>
+              <p class="w-10/12 font-bold tracking-wider">
+                Rainfall's New Identity
+              </p>
+              <p>
+                Rainfall's new identity is intentionally asertive, allowing us
+                to articulate exactly whats we do, and how our work sets the
+                standard for our field. It is bold rather than "shiny","slcik",
+                or "techy", beacause we have a point view and sensebilities
+                rooted
+              </p>
+              <div>
+                <button
+                  class="border-2 rounded-full border-black px-4 py-1 hover:bg-black hover:text-white"
+                >
+                  Read more
+                </button>
+              </div>
+            </div>
+            <div class="flex flex-col w-[7.4%] gap-3">
+              <div class="w-full h-[54%]">
+                <img
+                  class="w-full h-full"
+                  src="https://images.doclify.net/rainfall-web/d/57295a04-1def-4ada-a4f8-ac9e1ad84df7.jpg?enlarge=0&w=1400&format=webp"
+                  alt=""
+                />
+              </div>
+              <p class="font-base">Jul 2022</p>
+              <p class="w-10/12 font-bold tracking-wider">
+                Designing Test Logistics
+              </p>
+              <p>
+                How simple enhancements to experience design could improve
+                COVID-19 testing center speed.
+              </p>
+              <div>
+                <button
+                  class="border-2 rounded-full border-black px-4 py-1 hover:bg-black hover:text-white"
+                >
+                  Read more
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <div>
+          <p>Notoriety</p>
+          <p>Latest news</p>
+        </div>
+        <div>
+          <div>
+            <p>June 2022</p>
+            <p>Builtln</p>
+            <a href="">Read More</a>
+          </div>
+        </div>
+      </div>
+    </section>
     <section></section>
     <section></section>
     <section></section>
